# ttg_backend

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
.github/workflows/: django.yml
base_user/: admin.py  apps.py  models.py  serializer.py  urls.py  utils.py  views.py
base_user/migrations/: 0001_initial.py  0002_alter_baseuser_managers_remove_baseuser_username.py
core/: models.py  urls.py  views.py
customer/: models.py  seralizer.py  urls.py  views.py
docs/: contribute.md  roadmap.md
driver/: models.py
owner/: models.py
ttg_backend/: asgi.py  settings.py  urls.py  wsgi.py
utils/: cpermission_class.py  response.py
